<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.HomeFragment">

    <androidx.cardview.widget.CardView
        android:backgroundTint="@color/titleColor"
        app:cardCornerRadius="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="7dp"
        android:id="@+id/currentVersionParent">

        <TextView
            android:textColor="@color/white"
            android:text="Selected: NIV"
            android:id="@+id/currentVersion"
            android:paddingVertical="5dp"
            android:paddingHorizontal="8dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.cardview.widget.CardView>

    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/home_old_card_view"
        android:layout_above="@id/home_old_card_view"
        android:scaleType="fitCenter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo"
        android:id="@+id/imageView" />

    <androidx.cardview.widget.CardView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintBottom_toTopOf="@id/home_new_card_view"
        android:id="@+id/home_old_card_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/home_new_card_view"
        android:layout_marginBottom="3dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:padding="24dp"
            android:text="@string/old_testament"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="30sp"
            android:typeface="monospace"
            android:gravity="center_horizontal" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_old_card_view"
        android:id="@+id/home_new_card_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:padding="24dp"
            android:text="@string/new_testament"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>